# colate-task

./: .env.example  .gitignore  CMD  README.md  pyproject.toml
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  router.py  specialized.py
src/embeddings/: __init__.py  engine.py
src/mcp/: client.py  server.py
src/pdf/: __init__.py  extractor.py
src/rag/: pipeline.py
src/vectordb/: store.py
